--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <section id="new-arrival" class="relative z-10 md:px-16 px-6 py-8 space-y-16">
       <h3 class="text-h2-size capitalize"><span class="text-first">New</span> Arrivals</h3>
       <div class="swiper-container-wrapper">
-        <div id="products" class="swiper">
+        <div id="products" class="swiper overflow-visible">
           <!-- If we need navigation buttons -->
           <div class="flex space-x-10 mb-4">
             <div class="swiper-button-prev"><i class="fi fi-rr-angle-left"></i></div>
