--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     </footer>
   </main>
   <div id="modal"
-    class="fixed z-20 lg:hidden bg-white w-full h-full top-0 left-250 flex flex-col px-8 py-4 space-y-8 transition-all duration-300">
+    class="fixed z-20 lg:hidden bg-white w-1/4 h-full top-0 left-250 flex flex-col px-8 py-4 space-y-8 transition-all duration-300">
     <div class="flex justify-between items-center">
       <img src="/assets/icons/logo.svg" width="100" alt="">
       <button type="button" class="mt-2 cursor-pointer" onclick="hid_modal(modal)"><i
@@ -394,8 +394,7 @@
     </div>
     <ul class="font-600 pl-2 text-large-size flex flex-col items-start space-y-8 space-x-8 *:hover:text-first">
       <li><a href="#" id="active" class="">Home</a></li>
-      <li><a href="#products-content">Shop</a></li>
-      <li><a href="login.html">Login</a></li>
+      <li><a href="shop.html">Shop</a></li>
     </ul>
   </div>
   <script type="module" src="/src/main.js"></script>
