--- a/shop.html
+++ b/shop.html
@@ -161,8 +161,8 @@
                     class="fi fi-rr-cross-small text-3xl"></i></button>
         </div>
         <ul class="font-600 pl-2 text-large-size flex flex-col items-start space-y-8 space-x-8 *:hover:text-first">
-            <li><a href="#" id="active" class="">Home</a></li>
-            <li><a href="#products-content">Shop</a></li>
+            <li><a href="index.html" id="active" class="">Home</a></li>
+            <li><a href="#">Shop</a></li>
         </ul>
     </div>
 </body>
