--- a/checkout.html
+++ b/checkout.html
@@ -41,7 +41,7 @@
             </ul>
         </section>
         <!--========  BILLING  ==========-->
-        <section class="py-6 px-16" id="checkoutForm">
+        <section class="py-6 px-8 lg:px-12" id="checkoutForm">
             <div class="grid max-sm:grid-cols-1 lg:grid-cols-2 gap-12">
                 <!--======== SEC 1  ========-->
                 <div class="flex flex-col space-y-6">
@@ -98,7 +98,7 @@
                                     <div class="flex flex-col space-y-2 col-start-2">
                                         <label for="State / Province"
                                             class=" capitalize text-text-light text-normal-size">
-                                            PostCode / ZIPCode</label>
+                                            PostCode</label>
                                         <input type="text" class=" capitalize border border-border p-2" name="" id="">
                                     </div>
                                     <div class="flex flex-col space-y-2 col-start-1 col-end-3">
