--- a/checkout.html
+++ b/checkout.html
@@ -238,7 +238,7 @@
         </ul>
     </div>
     <div
-        class="confirm-order fixed z-30 rounded-2xl flex flex-col space-y-6 justify-center items-center top-1/3 left-1/2 transition-all duration-200 transform -translate-1/2 scale-0 w-1/4 h-1/3 bg-white">
+        class="confirm-order px-8 fixed z-30 rounded-2xl flex flex-col space-y-6 justify-center items-center top-1/3 left-1/2 transition-all duration-200 transform -translate-1/2 scale-0 w-[60%] md:w-1/3 h-1/3 bg-white">
         <i class="true-icon fi fi-sr-check text-big-size text-first border border-first rounded-full px-4"></i>
         <a href="index.html"
             class="bg-first border border-first text-white text-large-size px-3 py-2 w-fit rounded-lg hover:bg-white hover:text-first transition-all duration-200">continue
